--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,19 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+front/node_modules
 
 # testing
 /coverage
 
 # production
-/build
-/dist
-/.next
+front/build
+front/dist
+front/.next
 
 # misc
 .DS_Store
 .env
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+front/npm-debug.log*
+front/yarn-debug.log*
+front/yarn-error.log*
