--- a/front/package.json
+++ b/front/package.json
@@ -1,13 +1,17 @@
 {
   "name": "create-next-example-app",
   "scripts": {
-    "dev": "next",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@zeit/next-typescript": "^1.1.0",
+    "auth0-lock": "^11.10.0",
+    "jwt-decode": "^2.2.0",
     "next": "^6.1.1",
+    "next-routes": "^1.4.2",
+    "query-string": "^6.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
   },
